samples/_failures_safe/1761318401_53283e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de7ded5f.c: In function ‘main’:
./samples/SAFE/__tmp_de7ded5f.c:197:5: error: expected declaration or statement at end of input
  197 |     Token tokens[MAX_TOKENS];
      |     ^~~~~
